# branch_detection_ws

./: .gitignore  README.md
analysis/: bag_reader.py  tof_sensor.py  vl53l8cx_sensor.py
analysis/tof/: plot_live.ipynb  plot_live.py  plot_matplotlib.py  plot_plotly.py  plot_seaborn.py  serial_reader.py
analysis/vl53l8cx/: plot_matplotlib.py
src/branch_detection_interfaces/: CMakeLists.txt  package.xml
src/branch_detection_interfaces/branch_detection_interfaces/: CMakeLists.txt  package.xml
src/branch_detection_interfaces/msg/: Column4x4.msg  Column8x8.msg  Config4x4.msg  Config8x8.msg  Row4x4.msg  Row8x8.msg
src/branch_detection_interfaces/srv/: GetRobotDescription.srv
src/branch_detection_system_bringup/: package.xml  setup.cfg  setup.py
src/branch_detection_system_bringup/launch/: franka_fr3_basic.launch.py  system.launch.py  ur_basic.launch.py
src/particle_filter_bringup/: TODO.md  package.xml  setup.cfg  setup.py
src/pybullet_tree_sim/: .gitignore  README.md  main.py  pyproject.toml
src/pybullet_tree_sim/pybullet_tree_sim/: __init__.py  pruning_environment.py  pyb_environment.py  tree.py
src/pybullet_tree_sim/pybullet_tree_sim/pkl/: LPy_envy_tree1_points.pkl
src/pybullet_tree_sim/pybullet_tree_sim/urdf/supports_and_post/: supports_and_post.urdf  supports_and_post.urdf.xacro
src/pybullet_tree_sim/pybullet_tree_sim/urdf/supports_and_post/macro/: supports_and_post_base.urdf.xacro  supports_and_post_macro.urdf.xacro
src/pybullet_tree_sim/pybullet_tree_sim/urdf/trees/envy/: test.urdf  tree.urdf.xacro
src/pybullet_tree_sim/pybullet_tree_sim/urdf/trees/envy/macro/: tree_base.urdf.xacro  tree_macro.urdf.xacro
src/pybullet_tree_sim/pybullet_tree_sim/urdf/trees/ufo/test/: tree_14.urdf
src/pybullet_tree_sim/pybullet_tree_sim/utils/: helpers.py  pyb_utils.py  ur5_utils.py  xacro_utils.py
src/teensy32_tof_bringup/: package.xml  setup.py
src/teensy32_tof_msgs/: CMakeLists.txt  package.xml
src/tof_bringup/: package.xml  setup.cfg  setup.py
src/vl53l8cx_bringup/: package.xml  setup.cfg  setup.py
src/vl6180_bringup/: package.xml  setup.cfg  setup.py
src/vl6180_bringup/config/: vl6180.yaml
src/vl6180_bringup/launch/: vl6180.launch.py
src/vl6180_bringup/vl6180_bringup/: vl6180_filtered_node.py
(+50 files in other folders)
