[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybullet_tree_sim"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abhinav Jain", email = "jainab@oregonstate.edu" },
    { name = "Luke Strohbehn", email = "luke.strohbehn@gmail.com" },
]
maintainers = [{ name = "Luke Strohbehn", email = "luke.strohbehn@gmail.com" }]
description = "A PyBullet package for simulating trees with the UR5 arm."
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "numpy==1.26.4",
    "opencv-python",
    "pandas",
    "pybullet==3.2.6",
    "pywavefront",
    "scikit-image",
    "xacro",
]
