<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vl6180_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the VL6180 sensors</description>
  <maintainer email="luke.strohbehn@gmail.com">lukestroh</maintainer>
  <license>BSD-3-Clause</license>

  <depend>vl6180_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
